# event-grapher-rs

./: Cargo.toml  README.md  template.hbs
docs/: PEG.md
src/: ast.rs  dot_writer.rs  lib.rs  parsers.rs  visitor.rs
src/ast/: name_type.rs
