[package]
name = "event-grapher-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argopt = "0.3.0"
oni-comb-parser-rs = "0.0.271"
graphviz-rust = "0.6.6"
uuid = "1.6.1"

[dev-dependencies]
env_logger = "0.10.1"